# datathon-HRT-06-2026

./: .env.example  .gitignore  PLAN.md  README.md  challenge.md  pyproject.toml  requirements-baseline.txt  test_api.py
Data Dashboard/: app.py
Data_Dashboard/: app.py  requirements.txt
Submissions/: generate_submission.py  sessionCV_REPORT.txt  sessionCV_triplet_REPORT.txt  submission.csv
Tools/: prob_sign_margin_entropy.py  prob_sign_scores_train_test.csv  shapley_analysis.py  shapley_summary_augment.csv  shapley_summary_sharpe_linear.csv
data/: sentiments_seen_train.csv  sentiments_unseen_train.csv
notebooks/: session_viewer.ipynb
research/: _cell4_new.py  explore_headlines.ipynb
scripts/: audit_submission_strategy.py  benchmark-tailored  build_augmented_data.py  cv_grid_sharpe.py  cv_stability_submissions.py  generate_headline_submissions.py  generate_variant_submissions.py  parquet_to_readable_text.py  prob-reg-predictor  process_sentiment.py  regime-predictor  select_and_submit_augmented_models.py  select_and_submit_multihead_final.py  select_and_submit_separate_final.py  select_and_submit_separate_new.py  session_cv_triplet_report.py  tailored-predictor  train_competition.py  train_predict.py  train_predict_headlines.py  train_predict_min_var.py  update_sectors.py  validate-sentiment
src/: main.py
src/datathon_baseline/: __init__.py  features.py  io.py  labels.py  metrics.py  paths.py  predict.py
src/datathon_sharpe/: __init__.py  cli.py  cv.py  cv_grid.py  distributional_mono.py  features_seen_split.py  labels_seen_split.py  path_features.py  paths.py  sentiment_features.py  session_cv_compare.py  sharpe_label_transforms.py  split.py  train_model.py  training_table.py  ts_cnn.py  variant_submissions.py
src/headline_processor/: __init__.py  models.py  processor.py
src/predictor/: predictor.py
src/prob-reg/: __init__.py  heads.py  labels.py  paths.py  pipeline.py
src/regime/: __init__.py  clustering.py  emissions.py  forecast.py  hmm_model.py  labels.py  linear_head.py  news.py  paths.py  pipeline.py  progress.py  selection.py  sizing.py
src/tailored-modeler/: __init__.py  adversarial_validation.py  features.py  labels.py  models.py  news.py  paths.py  pipeline.py  sentiment.py  sizing.py
