[project]
name = "datathon-hrt-06-2026"
version = "0.1.0"
description = "Financial portfolio decision making based on headline sentiment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "pyarrow",
    "google-genai",
    "numpy",
    "python-dotenv",
    "requests",
    "tqdm",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.9.4",
    "transformers>=4.57.6",
    "torch>=2.8.0",
    "scipy>=1.10",
    "streamlit>=1.32",
    "plotly>=5.18",
    "kaleido>=0.2",
]

[project.scripts]
headline-analyzer = "src.main:main"

[dependency-groups]
dev = [
    "pytest",
    "black",
    "isort",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
