[project]
name = "datathon-hrt-06-2026"
version = "0.1.0"
description = "Financial portfolio decision making based on headline sentiment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # core data
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pyarrow==19.0.0",
    "scipy==1.15.1",
    # ML
    "scikit-learn==1.6.1",
    "xgboost==3.2.0",
    "lightgbm==4.6.0",
    "hmmlearn==0.3.3",
    # utilities
    "tqdm==4.67.1",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "joblib==1.4.2",
    # visualisation / dashboard
    "matplotlib==3.10.0",
    "plotly==5.24.1",
    "streamlit==1.41.1",
    # LLM / NLP (optional — comment out if not using headline pipeline)
    "google-genai",
    "transformers>=4.57.6",
    "torch>=2.8.0",
]

[project.scripts]
headline-analyzer = "src.main:main"
train-predict-headlines = "datathon_headline_pipeline.cli:main"
generate-headline-submissions = "datathon_headline_pipeline.all_submissions:main"
train-competition = "datathon_competition.cli:main"
train-sharpe-cv = "datathon_sharpe.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "black",
    "isort",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
