[project]
name = "datathon-hrt-06-2026"
version = "0.1.0"
description = "Financial portfolio decision making based on headline sentiment"
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    # Core Sharpe pipeline requirements
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pyarrow==19.0.0",
    "scipy==1.15.1",
    "scikit-learn==1.6.1",
    "python-dotenv==1.0.1",
    # Essential utilities
    "tqdm==4.67.1",
    "requests==2.32.3",
    "joblib==1.4.2",
]

[project.scripts]
headline-analyzer = "src.main:main"
train-predict-headlines = "datathon_headline_pipeline.cli:main"
generate-headline-submissions = "datathon_headline_pipeline.all_submissions:main"
train-competition = "datathon_competition.cli:main"
train-sharpe-cv = "datathon_sharpe.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "black",
    "isort",
    # ML extensions
    "xgboost==3.2.0",
    "lightgbm==4.6.0",
    "hmmlearn==0.3.3",
    "threadpoolctl==3.5.0",
    # LLM / NLP
    "google-genai",
    "transformers>=4.57.6",
    "torch>=2.8.0",
    # Visualisation / dashboard
    "matplotlib==3.10.0",
    "plotly==5.24.1",
    "streamlit==1.41.1",
    "pillow==11.1.0",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "fonttools==4.55.3",
    "kiwisolver==1.4.7",
    "pyparsing==3.2.1",
    "altair==5.5.0",
    "pydeck==0.8.0b4",
    "tornado==6.4.2",
    "narwhals==1.22.0",
    "protobuf==5.28.3",
    # Extra utilities / Transitive helpers
    "tenacity==9.0.0",
    "watchdog==6.0.0",
    "click==8.1.8",
    "rich==13.9.4",
    "GitPython==3.1.44",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "tzdata==2024.2",
    "six==1.17.0",
    "packaging==24.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
